[package]
name = "fst"
version = "0.1.0"
edition = "2024"
description = "Compact Feishu/Lark storage toolkit for listing, size audit, backup, and cleanup workflows"

[dependencies]
anyhow = "1.0"
anstream = "1.0"
clap = { version = "4.6", features = ["derive"] }
clap-verbosity-flag = { version = "3.0", features = ["tracing"] }
clap_complete = "4.6"
colorchoice = "1.0"
colorchoice-clap = "1.0"
console = "0.16"
csv = "1.3"
dirs = "6.0"
dunce = "1.0"
fs-err = "3.0"
futures = "0.3"
html-escape = "0.2"
humansize = "2.1.3"
humantime = "2.1"
indicatif = "0.18"
jiff = "0.2.28"
regex = "1.11"
sanitize-filename = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_path_to_error = "0.1"
syntect = "5.3"
syntect-assets = "0.23"
tabled = "0.21"
tempfile = "3.27"
thiserror = "2.0"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "sync"] }
tokio-retry = "0.3"
toml_edit = { version = "0.25", features = ["serde"] }
tracing = "0.1.44"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
which = "8.0"
